--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="NsCjIdJ8ZunQBvHqDu9uLkr0hQ3fWSzFgqZRwCeGf-o" />
     <title>تقرير متجر بطاقات رقمية</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -323,4 +324,5 @@
         lucide.createIcons();
     </script>
 </body>
+
 </html>
